--- a/e-Kheti-Manager/src/main/resources/application.properties
+++ b/e-Kheti-Manager/src/main/resources/application.properties
@@ -1,1 +1,14 @@
-spring.application.name=e-Kheti-Manager
+spring.application.name=e_Kheti_Manager
+server.port=8087
+
+spring.datasource.url= jdbc:mysql://localhost:3306/khetibook?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+	
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+
